# daily_prayer_call

./: .gitignore  README.adoc  README.md  daily_adaan.py  setup.cfg  setup.py
daily_adan_app.egg-info/: PKG-INFO  SOURCES.txt
data/prayerTimes/: annual_prayer_Ingolstadt_2022.json  annual_prayer_times_Ingolstadt_2022.json
docs/: addan_developer_doc.adoc
src/: LICENSE  MANIFEST.in  setup.cfg
src/daily_addan/: daily_adaan.py
src/daily_muslim_adan/: annual_prayer_times_Ingolstadt_2023.json  audiofilehandler.py  daily_muslim_adan.py  main.py  prayertimehandler.py
src/daily_muslim_adan/data/prayertime_files/: annual_prayer_times_Ingolstadt_2024.json  annual_prayer_times_Ingolstadt_2025.json
src/daily_muslim_adan/handlers/: audiofilehandler.py  oledhandler.py  prayertimehandler.py
src/data/prayertime_files/: annual_prayer_times_Ingolstadt_2023.json
