[metadata]
name = daily-adan-player
version = 1.0
author = Ammar Tauqir
author_email = ammar.tauqir2@gmail.com

description = Plays periodic adan after getting timing from remote api. Designed to run on rpi.
long_description = file:README.md
long_description_content_type = text/markdown

python_requires = >=3.8

url = https://github.com/Ammartauqir/daily_prayer_call

classifiers =
    Development Status :: Beta
    Environment :: Console
    Operating System :: Unix
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
    =src

install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =  dailyadan = daily_muslim_adan.main:main
