[metadata]
name = daily_adan_app
version = 1.0
author = Muhammad Ammar Tauqir
author_email = ammar.tauqir2@gmail.com
description = Daily adan app for raspberry pi
long_description = file: README.md
url = https://github.com/Ammartauqir/rpi_daily_addan
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True